packages/creative-coding-toy/src/vite/test/basics/projects/syntax-error/+project.js
function setup() {
  while
}

function draw() {
  
}
